Fixed some layout issue suggested by Kaii

--- a/Workspace/GetSkills/GetSkills/css/carousel.css
+++ b/Workspace/GetSkills/GetSkills/css/carousel.css
@@ -3,8 +3,7 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-bottom: 40px;
-  color: #5a5a5a;
+  color: #CCCCCC;
 }
 
 
@@ -32,7 +31,6 @@ body {
 .navbar-wrapper .navbar .container {
   width: auto;
 }
-
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
