--- a/Workspace/GetSkills/GetSkills/css/general.css
+++ b/Workspace/GetSkills/GetSkills/css/general.css
@@ -1,11 +1,13 @@
 
-.site-map {
-	padding-bottom: 40px;
-}
-
-.back-to-top {
-	width: 48px;
-	height: 48px;
+/* CUSTOMIZE THE FOOTER
+-------------------------------------------------- */
+footer {
+  position: relative;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 240px;
+  clear:both;
+  background-color: #222;
 }
 
 .business-partners {
@@ -24,4 +26,22 @@
 	display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.site-map {
+    margin-bottom: 40px;
+}
+
+.site-map a {
+    color: inherit;
+    text-decoration: none; /* no underline */
+}
+
+.copyright {
+    padding-top: 20px;
+    bottom: 0;
+}
+
+.copyright a {
+    color: inherit;
 }
